Update openshift-azure-pipelines.yml for Azure Pipelines

--- a/openshift-azure-pipelines.yml
+++ b/openshift-azure-pipelines.yml
@@ -71,14 +71,14 @@ stages:
     - task: oc-setup@2
       displayName: Connect With OpenShift
       inputs:
-        connectionType: 'OpenShift Connection Service'
+        connectionType: 'Kubernetes'
         openshiftService: 'ROSA-ABB'
         
 
     - task: oc-cmd@2
       displayName: Select DEV project
       inputs:
-        connectionType: 'OpenShift Connection Service'
+        connectionType: 'Kubernetes'
         openshiftService: 'ROSA-ABB'
         cmd: 'oc project $(project-name-dev)'
         uselocalOc: true
@@ -86,7 +86,7 @@ stages:
     - task: oc-cmd@2
       displayName: Deploy Docker Image To DEV
       inputs:
-        connectionType: 'OpenShift Connection Service'
+        connectionType: 'Kubernetes'
         openshiftService: 'ROSA-ABB'
         cmd: 'oc set triggers dc/$(development-cfg-dev) --from-image=$(project-name-dev)/$(image-repository-dev):$(tag) -c $(container-name-dev)'
         uselocalOc: true
